# leaves

./: .clineignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  LSM_IMPLEMENTATION_GUIDE.md  MergeModule.md  PARALLEL_FRAMEWORK_SUMMARY.md  README.md  architecture.drawio  bench_results.txt  benchmarks.txt  calc_sizes.py  create_flamegraphs.sh  error.yaml  fresh_build_log.txt  larch-leaves.leo  larch_leaves.pyx  main_chain_plan.txt  newtransact.md  perf-4t.data  perf-4t.data.old  perf-baseline.data  perf-new.data  perf.data  perf.data.old  profile_concurrent.sh  profile_session.sh  readme.md  test_output.txt  todos.md  tsan.supp  vcpkg.json  waf  wscript
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: close-out-of-scope-prs.yml  cross-platform-smoke.yml  test-slices.yml
.leo_shadow/: xbittrie.h  xnode.cpp
benchmarks/: README.md  bench.html  bench_hash_updater.cpp  bench_merge.cpp  bench_merger.cpp  bench_overwrite_vs_merge.cpp  bench_page_sizes.cpp  bench_page_sizes_browser.cpp  bench_range_filter.cpp  csize.py  db_bench_browser.cpp  db_bench_browser.js  db_bench_browser.wasm  db_bench_browser_runner.mjs  db_bench_leaves.cpp  db_bench_mdb.cpp  db_bench_memory.cpp  db_bench_rocksdb.cpp  sbench.cpp
benchmarks/experiments/: .gitignore  anode.cpp  block_assign.py  linear  linear-vs-sorted.cpp  linear.cpp  sorted  sorted.cpp  sweet_spot_merge_threshold.sh  trie2bit  trie2bit.cpp
benchmarks/microbench/: db_bench_leaves.cc  db_bench_mdb.cc  wscript
cmake/: leaves-config.cmake.in  version.hpp.in
docs/: AI_CONTINUATION_HANDOFF.md  BROWSER_STORAGE.md  JS_API.md  NewArchitecture.md  REPLICATION.md  SERIAL_NUMBER_ARITHMETIC.md  START_TXN_ID_ALGORITHM.md  TRANSFER_TRIE_SYNC.md  cpp-api.md  js-api.md  multiwriter.md  performance.md  plan-transactionLifecycleOptimization.prompt.md
docs/architecture/: architecture-overview.drawio  architecture.md  subsystems.drawio
docs/cpp-api/: cpp-api.md
docs/performance/: acid_workload_comparision_average.csv  acid_workload_comparison.csv  acid_workload_comparison_average.csv  batch_insert_scaling.csv  batch_update_scaling.csv  concurrent_workload_comparison.csv  concurrent_workload_comparison_average.csv  performance.md  throughput_matrix.csv  value_size_scaling.csv  workload_comparison.csv  workload_comparison_average.csv
examples/confluence_multithread/: CMakeLists.txt  README.md  main.cpp
examples/kv_browser/: CMakeLists.txt  README.md  client.cpp  index.html  run.mjs  server.cpp
examples/p2p_kv/: CMakeLists.txt  README.md  main.cpp
include/: leaves.hpp
include/larch/: leaf.h  leaves.h  leaves.hpp  node.h
include/leaves/: browserstore.hpp  confluence.hpp  cursor.hpp  db.hpp  filter.hpp  fstore.hpp  keycodec.hpp  leaves.hpp  lsm.hpp  lsm_mmap.hpp  metrics.hpp  mmap.hpp  replicating_browserstore.hpp  replicating_fstore.hpp  replicating_mmap.hpp  replication.hpp  replication_confluence.hpp
js/: _js_aspect.hpp  leaves_browser_storage.js  leaves_embind.cpp  leaves_replication.js  test.html
python/: setup.py
python/bench/: bench.py  findlength.py  multiplier.py  numbers.py
python/larch/: __init__.py  leaves.cpp  leaves.pyx
python/tests/: test_trie.py
src/: base64.cpp  bittrie.cpp  bittrie.h  bittrie.hpp  block.cpp  block.hpp  browser.cpp  browser.hpp  conversion.hpp  leaf.h  leaves.cpp  memory.cpp  memory.h  memory.hpp  murmurhash3.cpp  murmurhash3.h  node.cpp  node.h  node.hpp  page.cpp  page.hpp  pool.hpp  port.h  port.hpp  storage.cpp  storage.hpp  table.cpp  table.hpp  trace.cpp  trace.hpp  trie.cpp  trie.hpp
src/.leo_shadow/: xbittrie.cpp  xbittrie.h  xleaves.cpp  xmemory.cpp  xmemory.h  xport.h
tests/: check.py  compare.py  graph.py  graph_new.py  profile.cpp  simple.cpp  test.hpp  test_aspect.cpp  test_base64.cpp  test_bigmemory.cpp  test_bits.cpp  test_browserstore.cpp  test_burst.cpp  test_cursor.cpp  test_db.cpp  test_db.cpp.bak  test_executor.cpp  test_file_storage.cpp  test_fstore  test_fstore.cpp  test_hash_lookup.cpp  test_hash_mode.cpp  test_hash_updater.cpp  test_keycodec.cpp  test_lsm.cpp  test_lsm_db.cpp  test_lsm_mmap.cpp  test_map_storage.cpp  test_memory.cpp  test_memorydb.cpp  test_memstore.cpp  test_merger.cpp  test_metrics_aspects.cpp  test_mmap.cpp  test_modify.cpp  test_move.cpp  test_multiprocess.cpp  test_multithread.cpp  test_node.cpp  test_range_filter.cpp  (+16 more)
tests/burstcmp/: i_all_one_letter_1_abd.yaml  i_all_one_letter_2_abe.yaml  i_all_one_letter_3_abf.yaml  i_all_one_letter_4_abg.yaml  i_first_one_letter_1_abde.yaml  i_first_one_letter_2_abdf.yaml  i_first_one_letter_3_abdg.yaml  i_first_one_letter_4_abdh.yaml  i_one_letter_0_abc.yaml  i_one_letter_1_abchij.yaml  i_one_letter_2_abk.yaml  i_one_letter_3_abkmo.yaml  i_one_letter_4_abklm.yaml  i_same_prefix_1_abcd.yaml  i_same_prefix_2_abcde.yaml  i_same_prefix_3_abcdef.yaml  i_same_prefix_4_abcdefg.yaml  i_same_prefix_5_abcdefgh.yaml  i_short_1_abcefghi.yaml  i_short_2_abcfghij.yaml  i_short_3_abcghijk.yaml  i_short_4_abchijkl.yaml  i_short_5_abcd.yaml  i_short_after_1_abhij.yaml  i_short_after_2_abdef.yaml  i_short_after_3_abklmn.yaml  i_short_after_4_ab.yaml  i_short_before_1_abchij.yaml  i_short_before_2_abc.yaml  i_short_before_3_abcklm.yaml  i_short_before_4_abcklmo.yaml  i_split_0_abcdefg.yaml  i_top_1_abe.yaml  i_top_2_ab.yaml  remove_begin.yaml  remove_remove_0_abcdefg.yaml  remove_remove_1_abhij.yaml  remove_remove_2_abdef.yaml  remove_remove_3_abklmn.yaml  remove_remove_4_abklmo.yaml
tests/cmpfiles/: BitTrieAdd0-1  BitTrieAdd0-2  BitTrieAdd1_1-1  BitTrieAdd1_16-1  BitTrieAdd1_16-2  BitTrieAdd1_2-1  BitTrieAdd1_2-2  BitTrieAdd1_24-1  BitTrieAdd1_24-2  BitTrieAdd1_32-1  BitTrieAdd1_32-2  BitTrieAdd1_4-1  BitTrieAdd1_4-2  BitTrieAdd1_40-1  BitTrieAdd1_40-2  BitTrieAdd1_48-1  BitTrieAdd1_48-2  BitTrieAdd1_7-1  BitTrieAdd1_7-2  BitTrieAdd1_8-1  BitTrieAdd1_8-2  BitTrieAdd2-1  BitTrieAdd2-2  BitTrieEatCompressed-1  BitTrieEatCompressed-2  (+348 more)
tests/cross_platform/: CMakeLists.txt  main.cpp
tools/: dump-leaves.cpp  merge-dbs.cpp  page_sizes_solver.py
visualc/: visualc.sln
(+250 files in other folders)
